tests/rosetta/out/C/24-game-solve.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:36Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:36Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <time.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static long long _now() {
  struct timespec ts;
  clock_gettime(CLOCK_REALTIME, &ts);
  return (long long)ts.tv_sec * 1000000000LL + ts.tv_nsec;
}
static int OP_NUM = 0;
static int OP_ADD = 1;
static int OP_SUB = 2;
static int OP_MUL = 3;
static int OP_DIV = 4;
static int n_cards = 4;
static int goal = 24;
static int digit_range = 9;

typedef struct {
  int num;
  int denom;
} value_item_t;
typedef struct {
  int len;
  value_item_t *data;
} value_item_list_t;
value_item_list_t create_value_item_list(int len) {
  value_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(value_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int op;
  value_item_t value;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int num;
  int denom;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int num;
  int denom;
} tmp_item2_t;
typedef struct {
  int len;
  tmp_item2_t *data;
} tmp_item2_list_t;
tmp_item2_list_t create_tmp_item2_list(int len) {
  tmp_item2_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item2_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int num;
  int denom;
} tmp_item3_t;
typedef struct {
  int len;
  tmp_item3_t *data;
} tmp_item3_list_t;
tmp_item3_list_t create_tmp_item3_list(int len) {
  tmp_item3_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item3_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int op;
  int left;
  int right;
} node_item_t;
typedef struct {
  int len;
  node_item_t *data;
} node_item_list_t;
node_item_list_t create_node_item_list(int len) {
  node_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(node_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int newNum(int n) {
  return (tmp_item_t){.op = OP_NUM,
                      .value = (value_item_t){.num = n, .denom = 1}};
}

map_string_int exprEval(map_string_int x) {
  if ((x.data["op"] == OP_NUM)) {
    return x.data["value"];
  }
  map_string_int l = exprEval(x.data["left"]);
  map_string_int r = exprEval(x.data["right"]);
  if ((x.data["op"] == OP_ADD)) {
    return (tmp_item_t){
        .num = map_string_int_get(l, "num") * map_string_int_get(r, "denom") +
               map_string_int_get(l, "denom") * map_string_int_get(r, "num"),
        .denom =
            map_string_int_get(l, "denom") * map_string_int_get(r, "denom")};
  }
  if ((x.data["op"] == OP_SUB)) {
    return (tmp_item1_t){
        .num = map_string_int_get(l, "num") * map_string_int_get(r, "denom") -
               map_string_int_get(l, "denom") * map_string_int_get(r, "num"),
        .denom =
            map_string_int_get(l, "denom") * map_string_int_get(r, "denom")};
  }
  if ((x.data["op"] == OP_MUL)) {
    return (tmp_item2_t){
        .num = map_string_int_get(l, "num") * map_string_int_get(r, "num"),
        .denom =
            map_string_int_get(l, "denom") * map_string_int_get(r, "denom")};
  }
  return (tmp_item3_t){
      .num = map_string_int_get(l, "num") * map_string_int_get(r, "denom"),
      .denom = map_string_int_get(l, "denom") * map_string_int_get(r, "num")};
}

const char *exprString(map_string_int x) {
  if ((x.data["op"] == OP_NUM)) {
    char *tmp1 = _str(x.data["value"].data["num"]);
    return tmp1;
  }
  const char *ls = exprString(x.data["left"]);
  const char *rs = exprString(x.data["right"]);
  const char *opstr = "";
  if ((x.data["op"] == OP_ADD)) {
    opstr = " + ";
  } else if ((x.data["op"] == OP_SUB)) {
    opstr = " - ";
  } else if ((x.data["op"] == OP_MUL)) {
    opstr = " * ";
  } else {
    opstr = " / ";
  }
  char *tmp2 = concat_string("(", ls);
  char *tmp3 = concat_string(tmp2, opstr);
  char *tmp4 = concat_string(tmp3, rs);
  char *tmp5 = concat_string(tmp4, ")");
  return tmp5;
}

int solve(int xs) {
  if (xs.len == 1) {
    map_string_int f = exprEval(xs.data[0]);
    if (map_string_int_get(f, "denom") != 0 &&
        map_string_int_get(f, "num") == map_string_int_get(f, "denom") * goal) {
      printf("%s\n", exprString(xs.data[0]));
      return 1;
    }
    return 0;
  }
  int i = 0;
  while (i < xs.len) {
    int j = i + 1;
    while (j < xs.len) {
      list_int rest = list_int_create(0);
      int k = 0;
      while (k < xs.len) {
        if (k != i && k != j) {
          int tmp6_data[1];
          list_int tmp6 = {1, tmp6_data};
          tmp6.data[0] = xs.data[k];
          list_int tmp7 = concat_list_int(rest, tmp6);
          rest = tmp7;
        }
        k = k + 1;
      }
      int a = xs.data[i];
      int b = xs.data[j];
      list_int tmp8 = list_int_create(4);
      tmp8.data[0] = OP_ADD;
      tmp8.data[1] = OP_SUB;
      tmp8.data[2] = OP_MUL;
      tmp8.data[3] = OP_DIV;
      for (int tmp9 = 0; tmp9 < 4; tmp9++) {
        int op = tmp8[tmp9];
        node_item_t node = (node_item_t){.op = op, .left = a, .right = b};
        int tmp10_data[1];
        list_int tmp10 = {1, tmp10_data};
        tmp10.data[0] = node;
        list_int tmp11 = concat_list_int(rest, tmp10);
        if (solve(tmp11)) {
          return 1;
        }
      }
      node_item_t node = (node_item_t){.op = OP_SUB, .left = b, .right = a};
      int tmp12_data[1];
      list_int tmp12 = {1, tmp12_data};
      tmp12.data[0] = node;
      list_int tmp13 = concat_list_int(rest, tmp12);
      if (solve(tmp13)) {
        return 1;
      }
      node = (tmp_item_t){.op = OP_DIV, .left = b, .right = a};
      int tmp14_data[1];
      list_int tmp14 = {1, tmp14_data};
      tmp14.data[0] = node;
      list_int tmp15 = concat_list_int(rest, tmp14);
      if (solve(tmp15)) {
        return 1;
      }
      j = j + 1;
    }
    i = i + 1;
  }
  return 0;
}

int main() {
  int iter = 0;
  while (iter < 10) {
    list_int cards = list_int_create(0);
    int i = 0;
    while (i < n_cards) {
      int n = (_now() % (digit_range - 1)) + 1;
      int tmp16_data[1];
      list_int tmp16 = {1, tmp16_data};
      tmp16.data[0] = newNum(n);
      list_int tmp17 = concat_list_int(cards, tmp16);
      cards = tmp17;
      char *tmp18 = _str(n);
      char *tmp19 = concat_string(" ", tmp18);
      printf("%s\n", tmp19);
      i = i + 1;
    }
    printf(":  \n");
    if (((!solve(cards)))) {
      printf("No solution\n");
    }
    iter = iter + 1;
  }
}

int main() {
  main();
  return 0;
}
